appId: ${APP_ID}
tags:
  - example
---
- assertVisible: 'Go to screen with data from BE'
- tapOn: 'Go to screen with data from BE'
- assertVisible: 'Examples'
- tapOn: 'Examples'
