appId: host.exp.Exponent
---
- assertVisible: 'Open blog'
- tapOn: 'Open blog'
- assertVisible: ''
- tapOn: ''
